# CrewAiWorking

./: README.md
builder/: .env  README.md  pyproject.toml  report.md
builder/src/builder/: crew.py  main.py
builder/src/builder/config/: agents.yaml  tasks.yaml
